Fix nav bar layout on mobile and tablet

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -37,6 +37,12 @@ $courier: Courier, "Courier New", Monaco, Tahoma;
   }
 }
 
+@mixin tablet {
+  @media screen and (max-width: 1024px) {
+    @content;
+  }
+}
+
 // Rounded Corners
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
